[package]
name = "pdf_rs_wasm"
version = "1.0.0-pre.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdf = { path = "thirdparty/pdf/pdf" }
pdf_render = { path = "thirdparty/pdf_render/render" }
wasm-bindgen = { version = "0.2.83" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
