[package]
name = "pdf_rs_wasm"
version = "1.0.0-pre.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
export_json_schema = []  # cf. https://github.com/hi-ogawa/web-audio-worklet-rust/pull/8

[dependencies]
pdf = { path = "subtree/pdf/pdf" }
pdf_render = { path = "subtree/pdf_render/render" }
wasm-bindgen = { version = "0.2.83" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1.0"
schemars = "0.8.11"
gloo-utils = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.0" # https://rustwasm.github.io/docs/wasm-bindgen/wasm-bindgen-test/usage.html
web-sys = { version = "0.3.60", features = ['console'] } # https://rustwasm.github.io/docs/wasm-bindgen/examples/console-log.html
