[package]
name = "pdf_render"
version = "0.1.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2021"

[features]
unstable = []

[[bench]]
name = "render"
harness = false

[dependencies.pdf]
default-features=false
path = "../../pdf/pdf"

[dependencies]
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
log = "0.4"
font = { path = "../../font" }
pdf_encoding = "0.3"
itertools = "*"
image = "0.24.2"
instant = "*"
custom_debug_derive = "*"
globalcache = { path = "../../cachelib", features = ["sync"] }
istring = { git = "https://github.com/s3bk/istring" }
once_cell = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.1.0"
schemars = "0.8.11"

[dev-dependencies]
criterion = "0.3"
env_logger = "*"
